src/Providers-page/SearchBar.css
.provider-map-search-section {
    display: flex;
    justify-content: center;
    margin-left: .5em;
    margin-right: .5em;
}

.provider-map-searchbar {
    display: flex;
    flex-wrap: wrap;
    gap: 0.6rem;
    padding: .5rem;
    background-color: rgb(255, 255, 255);
    border-radius: 0.5rem;
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
}

.search-group {
    flex: 1 1 200px;
    min-width: 300px;
}



.provider-map-searchbar input[type="text"] {
    color: #ffffff;
    text-align: center;
}

.provider-map-searchbar input[type="text"]::placeholder {
    color: #ffffff;
    opacity: 0.7;
}

.filter-group {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5rem;
    flex: 999 1 auto;
    justify-content: center;
}

.filter-item {
    flex: 1 1 160px;
    min-width: 160px;
    max-width: 250px;
}

.button-group {
    display: flex;
    gap: 0.4rem;
    flex: 1 1 300px;
    justify-content: center;
    min-width: 200px;
    max-width: 100%;
}



.provider-map-searchbar input[type="text"] {
    width: 99.5%;
    border: none;
    border-radius: 0.25rem;
    font-size: 1rem;
    height: 38px;
    color: #ffffff;
    transition: background-color 0.3s ease;

}

/* Common styles for inputs and selects */
.provider-county-select,
.provider-insurance-select,
.provider-spanish-select,
.provider-service-select,
.provider-waitlist-select,
.provider-search-button,
.provider-reset-button {
    width: 100%;
    border: none;
    border-radius: 0.25rem;
    font-size: 1rem;
    height: 40px;
    padding-left: .4em;
    appearance: none;
    transition: background-color 0.3s ease;
}

/* Input and select specific styles */
.provider-map-searchbar input[type="text"],
.provider-county-select,
.provider-insurance-select,
.provider-spanish-select,
.provider-service-select,
.provider-waitlist-select {
    background-color: #555555;
    color: #ffffff;
}

/* Button specific styles */
.provider-search-button {
    background-color: #007bff;
    color: white;
    font-weight: 750;
}

.provider-reset-button {
    background-color: #b73939;
    color: white;
    font-weight: 750;
}

/* Hover states */
.provider-map-searchbar input[type="text"]:hover,
.provider-county-select:hover,
.provider-insurance-select:hover,
.provider-spanish-select:hover,
.provider-service-select:hover,
.provider-waitlist-select:hover {
    background-color: #444444;
}

.provider-search-button:hover {
    background-color: #0056b3;
}

.provider-reset-button:hover {
    background-color: #e68181;
}

/* Dropdown arrows */
.provider-county-dropdown,
.provider-insurance-dropdown,
.provider-spanish-dropdown,
.provider-service-dropdown,
.provider-waitlist-dropdown {
    position: relative;
    width: 100%;
}

.provider-county-dropdown::after,
.provider-insurance-dropdown::after,
.provider-spanish-dropdown::after,
.provider-service-dropdown::after,
.provider-waitlist-dropdown::after {
    content: "\25BC";
    position: absolute;
    right: 1rem;
    top: 50%;
    transform: translateY(-50%);
    color: #ffffff;
    pointer-events: none;
    font-size: 0.8rem;
}

